Changelog for zest.releaser
===========================

3.25 (unreleased)
-----------------

- Fixed finding a history/changes file that is in a sub directory when
  using subversion 1.7 or higher or bazaar.
  [maurits]


3.24 (2011-10-19)
-----------------

- Note: you may need to install setuptools_subversion when you use
  subversion 1.7.  If you suddenly start missing files in the sdists
  you upload to PyPI you definitely need it.  Alternatively: set up a
  proper MANIFEST.in as that method works with any version control
  system.
  [maurits]

- Made compatible with subversion 1.7 (the only relevant change is in
  the code that checks if a tags or tag directory already exists).
  Earlier versions of subversion are of course still supported.
  [maurits]

- Code repository moved to github:
  https://github.com/zestsoftware/zest.releaser
  [maurits]


3.23 (2011-09-28)
-----------------

- Fixed opening the html long description in ``longtest`` on Mac OS X
  Lion or python2.7 by using a ``file://`` url.
  Fixes https://bugs.launchpad.net/zest.releaser/+bug/858011
  [maurits]


3.22 (2011-05-05)
-----------------

- Allow specifying a tag on the command line when using lasttaglog or
  lasttagdiff, to show the log or diff since that tag instead of the
  latest.  Useful when you are on a branch and the last tag was from
  trunk.
  [maurits]


3.21 (2011-04-20)
-----------------

- Added lasttaglog command that list the log since the last tag.
  [maurits]
 
- Fix Mercurial (hg) support. As spreaded_internal should be set 
  to False (as it happens with git)
  [erico_andrei]

- Accept a twiggle (or whatever '~' is called) when searching for
  headers in a changelog; seen in some packages (at least
  zopeskel.dexterity).
  [maurits]


3.20 (2011-01-25)
-----------------

- Also allowing CHANGES.rst and CHANGES.markdown in addition to
  CHANGES.txt.


3.19 (2011-01-24)
-----------------

- No longer refuse to register and upload a package on pypi if it is